src/objects/PMD_Project__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>TEXT(Program_ID__r.Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaunchCal_Device_Calendar_URL__c</fullName>
        <label>LaunchCal Device Calendar URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PMD_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>PMD External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMD_Program_ID__c</fullName>
        <formula>Program_ID__r.Program_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Project</label>
        <referenceTo>PMD_Project__c</referenceTo>
        <relationshipLabel>Projects  (PMD)</relationshipLabel>
        <relationshipName>Projects_PMD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <label>Program Name</label>
        <referenceTo>PMD_Program__c</referenceTo>
        <relationshipLabel>Projects  (PMD)</relationshipLabel>
        <relationshipName>Project</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Shipping</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Active_Products__c</fullName>
        <label># of Active Products</label>
        <summaryFilterItems>
            <field>PMD_Product__c.Status__c</field>
            <operation>contains</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>PMD_Product__c.Project_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Active_and_Shipping_Products__c</fullName>
        <label># of Active and Shipping Products</label>
        <summaryFilterItems>
            <field>PMD_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Active, Shipping</value>
        </summaryFilterItems>
        <summaryForeignKey>PMD_Product__c.Project_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Total_Products__c</fullName>
        <label># of Total Products</label>
        <summaryForeignKey>PMD_Product__c.Project_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project  (PMD)</label>
    <listViews>
        <fullName>Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Program_ID__c</columns>
        <columns>Predecessor_Project__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active,On Hold,Shipping</value>
        </filters>
        <label>Active Projects</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Lenovo_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Brand__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Lenovo</value>
        </filters>
        <label>All - Lenovo Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Motorola_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Program_ID__c</columns>
        <columns>PMD_Program_ID__c</columns>
        <columns>LaunchCal_Device_Calendar_URL__c</columns>
        <columns>of_Active_and_Shipping_Products__c</columns>
        <columns>of_Active_Products__c</columns>
        <columns>of_Total_Products__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Motorola</value>
        </filters>
        <label>All - Motorola Projects</label>
    </listViews>
    <listViews>
        <fullName>Predecessor_report</fullName>
        <columns>NAME</columns>
        <columns>Predecessor_Project__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Discovery,Active,Shipping</value>
        </filters>
        <label>Predecessor report</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects  (PMD)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>